--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -549,6 +549,9 @@
     .flex--item {
       margin: 20px 0 0 0 !important;
     }
+    .padding_right_wrapper {
+      padding-right: 0 !important;
+    }
   }
   .reviews_wrapper {
     #waiting--for--approval {
