--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -12,5 +12,20 @@
     <li> If you are writing about a certain product, you may use the product image on company's website or on any other site like amazon.</li>
   </ul>
 
+  <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+    <circle cx="26" cy="26" r="25" fill="none"/>
+    <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+  </svg>
+
   <p>Return to your <%= link_to "dashboard", user_path(current_user) %></p>
 </div>
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $.fn.triggerCheck();
+    $("#site-wrapper").scroll(function(){
+        $.fn.triggerCheck();
+    });
+  });
+</script>
