--- a/app/views/pages/pitching_new_articles.html.erb
+++ b/app/views/pages/pitching_new_articles.html.erb
@@ -126,7 +126,7 @@
 
   <h4>Conclusion:</h4>
   <p class="mb-0">Great job for completing this tutorial and watching the videos! You can now start <a target="_blank" href="/pitches/new">pitching article topics</a> that other writers can claim.</p>
-  <svg id="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+  <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
