--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -39,5 +39,19 @@
 
   <p>The thumbnail image should be relevant to the topic, not grainy, not cropped in a weird way, and not contain a mostly white background.</p>
 
+  <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+    <circle cx="26" cy="26" r="25" fill="none"/>
+    <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+  </svg>
+
   <p>Read "<a href="/writing-the-perfect-article">Writing The Perfect Article</a>" Next →</p>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $.fn.triggerCheck();
+    $("#site-wrapper").scroll(function(){
+        $.fn.triggerCheck();
+    });
+  });
+</script>
