--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="card">
               <div class="card-body dashboard-card-2 dashboard-card">
-                <a href="<%= user_path(page: "public") %>">
+                <a href="<%= user_path(mode: "public") %>">
                   <div class="stats_wrapper">
                     <div class="value" id="value2"></div>
                     <div class="text-wrapper">
