--- a/app/views/users/dashboard/_public_writer_profile.html.erb
+++ b/app/views/users/dashboard/_public_writer_profile.html.erb
@@ -26,5 +26,8 @@
          </a>
        </div>
      </div>
+     <div class="mb-3 mt-3">
+       <%= will_paginate @user_posts_approved %>
+     </div>
    </div>
 </div>
