--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -12,7 +12,7 @@
     <h3>We grow as writers, as journalists, as leaders, together</h3>
     <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
       inspire and support each other into becoming part of the next generation of
-       journalists and influencers.</p>
+       journalists and influencers of change.</p>
     <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
     <p style="margin-top: 8px; font-family: 'Playfair Display'"><i>❝ Throughout human history, our greatest leaders and thinkers have used
       the power of words to transform our emotions, to enlist us in their causes, and to
@@ -24,7 +24,7 @@
       <p>The Teen Magazine's writer community will give you the guidance and experience necessary to launch your career in the
         journalism and blogging world. As a writer for The Teen Magazine, you will get the opportunity to:
         <ul>
-          <li>Pitch article topics and get published in an international online magazine</li>
+          <li>Pitch article topics and get published in a reputable online magazine</li>
           <li>Have your own public author page that you can share with potential employers</li>
           <li>Gain applicable experience and training in the editorial industry</li>
           <li>Interview successful people and work with brands</li>
@@ -35,5 +35,5 @@
         can be an active member in our writer community. We also have a smaller group on <a target="_blank" href="https://www.instagram.com/theteenmagazine_/">Instagram</a> for writers not on Facebook (just dm us).
         </p>
       </div>
-      <%= link_to "Next", onboarding_path(page: "your_profile"), :id => "onboarding_button" %>
+      <%= link_to "Next", onboarding_path(step: "your_profile"), :id => "onboarding_button" %>
     </div>
