--- a/app/views/users/onboarding/_your_profile.html.erb
+++ b/app/views/users/onboarding/_your_profile.html.erb
@@ -1,5 +1,5 @@
 <div class="stair_step">
-  <a href="/onboarding?page=welcome" class="node">
+  <a href="/onboarding?step=welcome" class="node">
     <span class="progress_step">
       &#x25cf;
       <p>Welcome</p>
