--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -73,6 +73,8 @@
                                 <span class="sec counter counter-sm"></span><p><%= @unseen_editor_dashboard_cnt %> new</p>
                                <% end %>
                              </a>
+                          <% elsif (!current_user.partner? && (current_user.is_new?)) %>
+                              <a href="<%= pitches_path(user_id: current_user.id) %>" class="dropdown-item">My Pitches</a>
                           <% end %>
                           <% if !current_user.partner? %>
                             <a href="/pitches" class="dropdown-item">Unclaimed Pitches
@@ -97,7 +99,7 @@
                           <% if current_user.editor? %>
                             <%= link_to "Writers", users_path, class: "dropdown-item" %>
                           <% elsif !current_user.partner? %>
-                            <%= link_to "Review Onboarding", onboarding_path(:page => "welcome"), class: "dropdown-item" %>
+                            <%= link_to "Review Onboarding", onboarding_path(:step => "welcome"), class: "dropdown-item" %>
                           <% end %>
                           <% if current_user.admin? %>
                             <%= link_to "Editors", "/editors", class: "dropdown-item" %>
@@ -150,10 +152,10 @@
         return (!(viewport.right < bounds.left || viewport.left > bounds.right || viewport.bottom < bounds.top || viewport.top > bounds.bottom));
       };
       $.fn.triggerCheck = function(){
-        if ($('#checkmark').isOnScreen()) {
-          $('#checkmark').addClass("checkmark");
-          $('#checkmark path').addClass("checkmark__check");
-          $('#checkmark circle').addClass("checkmark__circle");
+        if ($('.checkmark').isOnScreen()) {
+          $('.checkmark').addClass("checkmark");
+          $('.checkmark path').addClass("checkmark__check");
+          $('.checkmark circle').addClass("checkmark__circle");
         }
       };
       $('document').ready(function() {
