--- a/app/views/pages/reviewing_articles.html.erb
+++ b/app/views/pages/reviewing_articles.html.erb
@@ -88,7 +88,7 @@
 
   <p>If you've reached the end of this list and answered "yes" to all of the questions, you may publish the article on The Teen Magazine.</p>
 
-  <svg id="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+  <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
