--- a/app/views/users/partner.html.erb
+++ b/app/views/users/partner.html.erb
@@ -50,7 +50,7 @@
           <div>
             <h3><%= @partner.full_name %>, Welcome to The Teen Magazine!</h3>
             <p>We are so excited to be collaborating with you. This account can be used to view and give feedback on the articles you've been added to before they are published.
-              You are also be able to track in real-time the viewership stats of all your articles once they have been published.</p>
+              You are also able to track in real-time the viewership stats of all your articles once they have been published.</p>
             <p>If you have any questions or concerns please contact any of the emails below:</p>
             <p>Mia Johansson<br>Founder, CEO<br>mia@theteenmagazine.com</p>
             <p>Kate-Yeonjae Jeong<br>Photography Lead & Marketing Director<br>katejeong@theteenmagazine.com</p>
