--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -324,6 +324,7 @@ html, body {
   top: 0;
   left: -320px;
   background: white;
+  position: fixed;
   padding: 25px;
   z-index: 5003;
   a, h2 {
