--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -140,6 +140,7 @@
               <%= yield %>
           </div>
         </div>
+        <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
         <%= render "layouts/partials/footer" %>
       </div>
     </section>
