--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -40,7 +40,7 @@
           </ol>
           <p>We're so happy you've joined The Teen Magazine! Our editors are looking forward to reading your first article submission.</p>
         </div>
-        <div data-step data-index="3" data-onboarding-content="You'll see all your started drafts here." class="dashboard--articles--wrapper">
+        <div data-step data-index="3" data-onboarding-content="You will see all your started drafts here." class="dashboard--articles--wrapper">
           <% if @user_pitches.present? %>
             <h6 class="header_ttl">Your Pitches</h6>
             <%= render "/users/partials/dashboard_pitches", pitches: @user_pitches, image: "waiting.png" %>
