--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -1,6 +1,6 @@
 @import "mdbootstrap/css/bootstrap.min";
-@import "mdbootstrap/css/mdb.min";
 @import "mdbootstrap/css/mdb";
+@import "mdbootstrap/css/mdb.min";
 @import "common";
 @import 'normalize';
 @import 'welcome';
@@ -14,6 +14,10 @@
    .nav-title {
      display: inline-block !important;
    }
+}
+
+.popover {
+  max-width: 285px !important;
 }
 
 .popover-text {
@@ -572,7 +576,7 @@ a:hover {
     pointer-events: none;
     display: inline-block;
     position: absolute;
-    line-height: 25px;
+    line-height: 23px;
     left:0;
     right:0;
     margin-left:20px;
