--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
           <header id="main_navigation" class="clearfix">
             <div id="banner">
               <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
-              <a id="name_wrapper" href="/"><%= image_tag "teenmag.png", id: "name" %></a>
+              <a id="name_wrapper" href="/"><div id="name"></div></a>
               <div class="social-media">
                 <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
                 <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
