--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -54,7 +54,7 @@
 <script type="text/javascript">
   $(document).ready(function(){
     $.fn.triggerCheck();
-    $("#site-wrapper").scroll(function(){
+    $(window).on('scroll',function(){
         $.fn.triggerCheck();
     });
   });
