--- a/app/views/pages/pitching_new_articles.html.erb
+++ b/app/views/pages/pitching_new_articles.html.erb
@@ -136,7 +136,7 @@
 <script type="text/javascript">
   $(document).ready(function(){
     $.fn.triggerCheck();
-    $("#site-wrapper").scroll(function(){
+    $(window).on('scroll',function(){
         $.fn.triggerCheck();
     });
   });
